[gd_scene load_steps=17 format=2]

[ext_resource path="res://scenes/levels/onePlanet_Gravity.gd" type="Script" id=1]
[ext_resource path="res://assets/levels/planet4.png" type="Texture" id=2]
[ext_resource path="res://assets/levels/level3_background.png" type="Texture" id=3]
[ext_resource path="res://assets/levels/level1_planet.png" type="Texture" id=4]
[ext_resource path="res://scenes/levels/Level2.gd" type="Script" id=5]
[ext_resource path="res://scenes/UI/timerTurn.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/soldiers/blueSoldier.tscn" type="PackedScene" id=7]
[ext_resource path="res://scenes/soldiers/redSoldier.tscn" type="PackedScene" id=8]
[ext_resource path="res://scenes/levels/mapLimits.gd" type="Script" id=9]
[ext_resource path="res://scenes/planets/particles_plante_285.tres" type="Material" id=10]
[ext_resource path="res://scenes/levels/HUD.gd" type="Script" id=11]

[sub_resource type="CircleShape2D" id=1]
radius = 120.0

[sub_resource type="CircleShape2D" id=2]
radius = 285.028

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 3.8, 636.5 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 211.3, 13.5 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 214.65, 11.5 )

[node name="Level2" type="Node2D"]
script = ExtResource( 5 )

[node name="HUD" type="CanvasLayer" parent="."]
script = ExtResource( 11 )

[node name="HUDBlueTeam" type="ColorRect" parent="HUD"]
visible = false
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -92.0
margin_right = 100.0
color = Color( 0, 0, 0, 0.588235 )

[node name="ProgressBar" type="ProgressBar" parent="HUD/HUDBlueTeam"]
margin_left = 23.0
margin_top = 3.0
margin_right = 97.0
margin_bottom = 17.0

[node name="ProgressBar2" type="ProgressBar" parent="HUD/HUDBlueTeam"]
margin_left = 22.0
margin_top = 26.0
margin_right = 97.0
margin_bottom = 40.0

[node name="ProgressBar3" type="ProgressBar" parent="HUD/HUDBlueTeam"]
margin_left = 22.0
margin_top = 51.0
margin_right = 97.0
margin_bottom = 65.0

[node name="ProgressBar4" type="ProgressBar" parent="HUD/HUDBlueTeam"]
margin_left = 22.0
margin_top = 75.0
margin_right = 97.0
margin_bottom = 89.0

[node name="HUDRedTeam" type="ColorRect" parent="HUD"]
visible = false
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -101.0
margin_top = -92.0
color = Color( 0, 0, 0, 0.588235 )

[node name="ProgressBar" type="ProgressBar" parent="HUD/HUDRedTeam"]
margin_left = 4.0
margin_top = 3.0
margin_right = 78.0
margin_bottom = 17.0

[node name="ProgressBar2" type="ProgressBar" parent="HUD/HUDRedTeam"]
margin_left = 3.0
margin_top = 26.0
margin_right = 78.0
margin_bottom = 40.0
rounded = true

[node name="ProgressBar3" type="ProgressBar" parent="HUD/HUDRedTeam"]
margin_left = 3.0
margin_top = 51.0
margin_right = 78.0
margin_bottom = 65.0
rounded = true

[node name="ProgressBar4" type="ProgressBar" parent="HUD/HUDRedTeam"]
margin_left = 3.0
margin_top = 75.0
margin_right = 78.0
margin_bottom = 89.0
rounded = true

[node name="HUDSimple" type="ColorRect" parent="HUD"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -110.0
margin_right = 110.0
margin_bottom = 59.0
color = Color( 0, 0, 0, 0.588235 )

[node name="TimerTurn" parent="HUD" instance=ExtResource( 6 )]

[node name="Background" type="TextureRect" parent="."]
margin_right = 2065.0
margin_bottom = 1203.0

[node name="Sprite" type="Sprite" parent="Background"]
position = Vector2( 1044.75, 628.75 )
scale = Vector2( 1.10547, 1.17083 )
texture = ExtResource( 3 )

[node name="listPlanets" type="Node" parent="."]

[node name="Planet1" type="StaticBody2D" parent="listPlanets"]
position = Vector2( 1512, 637 )
collision_layer = 11
collision_mask = 3

[node name="ParticlesGravity" type="Particles2D" parent="listPlanets/Planet1"]
amount = 35
lifetime = 100.0
process_material = ExtResource( 10 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="listPlanets/Planet1"]
shape = SubResource( 1 )

[node name="Gravity" type="Area2D" parent="listPlanets/Planet1"]
collision_layer = 26
collision_mask = 0
space_override = 3
gravity_point = true
gravity_vec = Vector2( 0, 0 )
gravity = 200.0
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="listPlanets/Planet1/Gravity"]
shape = SubResource( 2 )

[node name="Label" type="Label" parent="listPlanets/Planet1/Gravity"]
margin_left = -76.0
margin_top = -321.0
margin_right = 95.0
margin_bottom = -288.0

[node name="Sprite" type="Sprite" parent="listPlanets/Planet1"]
scale = Vector2( 0.82, 0.8 )
texture = ExtResource( 2 )

[node name="Planet2" type="StaticBody2D" parent="listPlanets"]
position = Vector2( 657, 613 )
collision_layer = 11
collision_mask = 3

[node name="ParticlesGravity" type="Particles2D" parent="listPlanets/Planet2"]
amount = 35
lifetime = 100.0
process_material = ExtResource( 10 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="listPlanets/Planet2"]
shape = SubResource( 1 )

[node name="Gravity" type="Area2D" parent="listPlanets/Planet2"]
collision_layer = 26
collision_mask = 0
space_override = 3
gravity_point = true
gravity_vec = Vector2( 0, 0 )
gravity = 200.0
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="listPlanets/Planet2/Gravity"]
shape = SubResource( 2 )

[node name="Label" type="Label" parent="listPlanets/Planet2/Gravity"]
margin_left = -76.0
margin_top = -321.0
margin_right = 95.0
margin_bottom = -288.0

[node name="Sprite" type="Sprite" parent="listPlanets/Planet2"]
scale = Vector2( 2.5, 2.5 )
texture = ExtResource( 4 )

[node name="queueBlue" type="Node" parent="."]

[node name="Blue1" parent="queueBlue" instance=ExtResource( 7 )]
position = Vector2( 657, 421 )

[node name="Blue2" parent="queueBlue" instance=ExtResource( 7 )]
position = Vector2( 841, 598 )

[node name="Blue3" parent="queueBlue" instance=ExtResource( 7 )]
position = Vector2( 465, 592 )

[node name="Blue4" parent="queueBlue" instance=ExtResource( 7 )]
position = Vector2( 659, 791 )

[node name="queueRed" type="Node" parent="."]

[node name="Red1" parent="queueRed" instance=ExtResource( 8 )]
position = Vector2( 1517, 426 )

[node name="Red2" parent="queueRed" instance=ExtResource( 8 )]
position = Vector2( 1308, 606 )

[node name="Red3" parent="queueRed" instance=ExtResource( 8 )]
position = Vector2( 1734, 620 )

[node name="Red4" parent="queueRed" instance=ExtResource( 8 )]
position = Vector2( 1517, 817 )

[node name="mapLimits" type="Node" parent="."]
script = ExtResource( 9 )

[node name="left" type="Area2D" parent="mapLimits"]
scale = Vector2( 5, 1 )
collision_layer = 28
collision_mask = 28

[node name="CollisionShape2D" type="CollisionShape2D" parent="mapLimits/left"]
position = Vector2( -5.4, 630.5 )
shape = SubResource( 3 )

[node name="bottom" type="Area2D" parent="mapLimits"]
position = Vector2( 538, 981 )
scale = Vector2( 5, 1 )
collision_layer = 28
collision_mask = 28

[node name="CollisionShape2D" type="CollisionShape2D" parent="mapLimits/bottom"]
position = Vector2( 103.5, 294.5 )
shape = SubResource( 4 )

[node name="upper" type="Area2D" parent="mapLimits"]
position = Vector2( 529, -301 )
scale = Vector2( 5, 1 )
collision_layer = 28
collision_mask = 28

[node name="CollisionShape2D" type="CollisionShape2D" parent="mapLimits/upper"]
position = Vector2( 99.8, 282 )
shape = SubResource( 5 )

[node name="rigth" type="Area2D" parent="mapLimits"]
position = Vector2( 1048, 2 )
scale = Vector2( 5, 1 )
collision_layer = 28
collision_mask = 28

[node name="CollisionShape2D" type="CollisionShape2D" parent="mapLimits/rigth"]
position = Vector2( 216.4, 624 )
shape = SubResource( 3 )

[node name="Camera" type="Camera2D" parent="."]
anchor_mode = 0
current = true
zoom = Vector2( 2, 2 )
